--- a/Doc/项目资料.md
+++ b/Doc/项目资料.md
@@ -1,13 +1,17 @@
-#推送相关配置
-1.个推帐号：phillip0527  密码：Lixiaoyu0527@
-2.应用标识：build.gradle —> applicationId "com.example.phillip.yuim"   
-3.AppID：w2xQKuYE6g7SoIwWN6E4d1
-   AppSecret：aOGd2JkN9N7K3DOeIUiSE2
-   AppKey： hj4ToQzAsXANUMcYBPXIL5
-   MasterSecret： OCW2cBEKE9A7TQWcLew9d3
+# 项目资料
+
+### 推送相关配置
+- 个推帐号：phillip0527  
+- 密码：Lixiaoyu0527@
+- 应用标识：build.gradle —> applicationId "com.example.phillip.yuim" 
+- AppID：w2xQKuYE6g7SoIwWN6E4d1
+- AppSecret：aOGd2JkN9N7K3DOeIUiSE2
+- AppKey： hj4ToQzAsXANUMcYBPXIL5
+- MasterSecret： OCW2cBEKE9A7TQWcLew9d3
 
    
-#阿里云相关配置
-1.帐号：yuaimelin1314@sina.cn   密码：Lixiaoyu0527
-   AccessKeyID：LTAIDMmevMDjHfko
-   AccessKeySecret：w2RmFfbgrycSMR8xRs73QVzWclc6eu
+### 阿里云相关配置
+- 帐号：yuaimelin1314@sina.cn   
+- 密码：Lixiaoyu0527
+- AccessKeyID：LTAIDMmevMDjHfko
+- AccessKeySecret：w2RmFfbgrycSMR8xRs73QVzWclc6eu
